--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Vancoillie IT Hulp – Calculator</title>
+  <meta name="robots" content="noindex, nofollow">
   <style>
     :root{
       --bg:#f8fafc;          /* achtergrond */
